2012-05-06  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Convert isPageBoxVisible to use Internals interface.
        https://bugs.webkit.org/show_bug.cgi?id=85692

        Reviewed by Darin Adler.

        Remove isPageBoxVisible functions, because it is able to work in the
        cross-port way through the Internals interface.

        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
        * WebCoreSupport/DumpRenderTreeSupportGtk.h:
        (DumpRenderTreeSupportGtk):

2012-05-05  Martin Robinson  <mrobinson@igalia.com>

        Fix the GTK+ TextureMapper accelerated compositing build.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_realize): Properly access the private data
        structure of the WebKitWebView.

2012-05-05  Martin Robinson  <mrobinson@igalia.com>

        [GTK] WebKit should properly set the input method context window location
        https://bugs.webkit.org/show_bug.cgi?id=84981

        Reviewed by Gustavo Noronha Silva.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::paint): During painting, update the cursor rectangle
        if possible.

2012-05-05  Gustavo Noronha Silva  <gns@gnome.org>

        Unreviewed preparation for 1.9.2.

        * NEWS: changes from 1.9.1.

2012-05-04  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] Simplify how libWebCoreModules is linked in, and fix WebKit2 build
        https://bugs.webkit.org/show_bug.cgi?id=85691

        * GNUmakefile.am: no longer link libwebkitgtk to libWebCoreModules.

2012-05-04  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>

        [GTK] DRT needs an implementation of LayoutTestController::setDefersLoading and ::goBack
        https://bugs.webkit.org/show_bug.cgi?id=85134

        Reviewed by Martin Robinson.

        Add support for setDefersLoading in DumpRenderTreeSupportGtk.

        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
        (DumpRenderTreeSupportGtk::setDefersLoading):